change 'nickname' to 'username' and minor fixes - user can quit while typing username - user gets a default username if none is provided - user gets told that they can leave with '/quit' - orderSplit List syntax is updated for better compatibility and better style - other fixes