@@ -5,6 +5,7 @@ import java.io.PrintWriter;
 import java.net.Socket;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import types.Operations;
 
@@ -14,11 +15,12 @@ class ConnectionHandler implements Runnable {
 	private final Socket client;
 	private BufferedReader in;
 	private PrintWriter out;
-	private String nickname;
+	private String username;
 	
-	public ConnectionHandler(Server server, Socket client) {
+	public ConnectionHandler(Server server, Socket client, int id) {
 		this.server = server;
 		this.client = client;
+		username = "USER-" + id;
 	}
 
 	@Override
@@ -26,36 +28,46 @@ class ConnectionHandler implements Runnable {
 		try {
 			in = new BufferedReader(new InputStreamReader(client.getInputStream()));
 			out = new PrintWriter(client.getOutputStream(), true);
-			out.println("Welcome to the Chat-Server!");
+			out.println("Welcome to the Order-Chat-Server!");
+			out.println("Type `/quit` to leave.");
 			out.flush();
-			out.print("Provide a nickname: ");
+			out.print("Provide a username: ");
 			out.flush();
-			nickname = in.readLine();
-			this.server.broadcast(this, Operations.CMD_JOIN);
+			String input = in.readLine();
+			if (input != null && input.toUpperCase().contains("/QUIT")) {
+				shutdown();
+			} else if (input != null && !input.strip().isEmpty()) {
+				// the case when the connection is closed but the readLine() is still
+				// running, is not handled
+				System.out.println("username changed, length: "+input.length());
+				username = input;
+			}
+			server.broadcast(this, Operations.CMD_JOIN);
 			String message;
 			
 			while((message = in.readLine()) != null) {
 				if (message.toUpperCase().startsWith("/QUIT")) {
-					this.server.broadcast(this, Operations.CMD_QUIT, List.of(nickname));
+					server.broadcast(this, Operations.CMD_QUIT, List.of(username));
 					shutdown();
-				} else if (message.toUpperCase().startsWith("/NICKNAME ")) {
-					String[] nicknameSplit = message.split(" ", 2);
-					if (nicknameSplit.length == 2) {
-						this.server.broadcast(this, Operations.CMD_RENAME, List.of(nicknameSplit[1]));
-						nickname = nicknameSplit[1];
+				} else if (message.toUpperCase().startsWith("/RENAME ")) {
+					String[] usernameSplit = message.split(" ", 2);
+					if (usernameSplit.length == 2) {
+						server.broadcast(this, Operations.CMD_RENAME, List.of(usernameSplit[1]));
+						username = usernameSplit[1];
 					} else {
-						this.server.reportError(this, Operations.CMD_RENAME);
+						server.reportError(this, Operations.CMD_RENAME);
 					}
 				} else if (message.toUpperCase().startsWith("/ADD ")) {
-					List<String> orderSplit = Arrays.asList(message.toUpperCase().split(" "));
-					orderSplit = orderSplit.stream().filter(w -> this.server.isOrderItem(w)).toList();
+					List<String> orderSplit = Arrays.stream(message.toUpperCase().split(" "))
+                            .filter(w -> server.isOrderItem(w))
+                            .collect(Collectors.toList());
 					if (orderSplit.size() > 0) {
-						this.server.broadcast(this, Operations.CMD_ORDER, orderSplit);
+						server.broadcast(this, Operations.CMD_ORDER, orderSplit);
 					} else {
-						this.server.reportError(this, Operations.CMD_ORDER);
+						server.reportError(this, Operations.CMD_ORDER);
 					}
 				} else {
-					this.server.broadcast(this, Operations.TEXT, List.of(message));
+					server.broadcast(this, Operations.TEXT, List.of(message));
 				}
 			}
 			
@@ -68,8 +80,8 @@ class ConnectionHandler implements Runnable {
 		out.println(message); 
 	}
 	
-	public String getNickname() {
-		return nickname;
+	public String getUsername() {
+		return username;
 	}
 	
 	public void shutdown() {
@@ -77,6 +89,7 @@ class ConnectionHandler implements Runnable {
 			in.close();
 			out.close();
 			if(client.isClosed()) {
+				server.broadcast(this, Operations.CMD_QUIT);
 				client.close();
 			}
 		} catch (IOException e) {
